--- a/arch/arm/configs/su640_wind_defconfig
+++ b/arch/arm/configs/su640_wind_defconfig
@@ -17,7 +17,7 @@ CONFIG_TRACE_IRQFLAGS_SUPPORT=y
 CONFIG_HARDIRQS_SW_RESEND=y
 CONFIG_GENERIC_IRQ_PROBE=y
 CONFIG_ARM_TICKET_LOCKS=y
-CONFIG_RWSEM_GENERIC_SPINLOCK=y
+CONFIG_RWSEM_XCHGADD_ALGORITHM=y
 CONFIG_ARCH_HAS_CPUFREQ=y
 CONFIG_ARCH_HAS_CPU_IDLE_WAIT=y
 CONFIG_GENERIC_HWEIGHT=y
@@ -225,7 +225,7 @@ CONFIG_LGE_PM_POWER_RTC_ALARM_OFF=y
 CONFIG_LGE_PM_TEMPERATURE_MONITOR=y
 CONFIG_LGE_PM_FACTORY_CURRENT_DOWN=y
 CONFIG_LGE_PM_FACTORY_FUEL_GAUGE=y
-CONFIG_LGE_PM_PLATFORM_BSP_DEBUG=y
+# CONFIG_LGE_PM_PLATFORM_BSP_DEBUG is not set
 
 #
 # MHL
@@ -427,6 +427,7 @@ CONFIG_HAVE_KPROBES=y
 CONFIG_HAVE_KRETPROBES=y
 CONFIG_HAVE_DMA_CONTIGUOUS=y
 CONFIG_USE_GENERIC_SMP_HELPERS=y
+CONFIG_GENERIC_SMP_IDLE_THREAD=y
 CONFIG_HAVE_REGS_AND_STACK_ACCESS_API=y
 CONFIG_HAVE_CLK=y
 CONFIG_HAVE_DMA_API_DEBUG=y
@@ -687,7 +688,7 @@ CONFIG_MSM_SMD=y
 CONFIG_MSM_SMD_PKG4=y
 CONFIG_MSM_RPC_SDIO_XPRT=y
 CONFIG_MSM_RPC_SDIO_DEBUG=y
-CONFIG_MSM_SMD_DEBUG=y
+# CONFIG_MSM_SMD_DEBUG is not set
 CONFIG_MSM_SDIO_AL=y
 CONFIG_MSM_SDIO_DMUX=y
 CONFIG_MSM_N_WAY_SMD=y
@@ -730,7 +731,7 @@ CONFIG_MSM8X60_AUDIO=y
 # CONFIG_MSM8X60_FTM_AUDIO_DEVICES is not set
 CONFIG_RTAC=y
 # CONFIG_MSM_VREG_SWITCH_INVERTED is not set
-CONFIG_MSM_DMA_TEST=m
+# CONFIG_MSM_DMA_TEST is not set
 CONFIG_WIFI_CONTROL_FUNC=y
 # CONFIG_WIFI_MEM_PREALLOC is not set
 CONFIG_MSM_SLEEP_TIME_OVERRIDE=y
@@ -934,7 +935,7 @@ CONFIG_ALIGNMENT_TRAP=y
 # CONFIG_CC_STACKPROTECTOR is not set
 # CONFIG_DEPRECATED_PARAM_STRUCT is not set
 # CONFIG_ARM_FLUSH_CONSOLE_ON_RESTART is not set
-CONFIG_CP_ACCESS=m
+# CONFIG_CP_ACCESS is not set
 
 #
 # Boot options
@@ -1038,7 +1039,7 @@ CONFIG_PACKET=y
 CONFIG_UNIX=y
 # CONFIG_UNIX_DIAG is not set
 CONFIG_XFRM=y
-CONFIG_XFRM_USER=y
+# CONFIG_XFRM_USER is not set
 CONFIG_XFRM_SUB_POLICY=y
 CONFIG_XFRM_MIGRATE=y
 CONFIG_XFRM_STATISTICS=y
@@ -1060,7 +1061,7 @@ CONFIG_IP_PNP_DHCP=y
 # CONFIG_NET_IPGRE_DEMUX is not set
 # CONFIG_ARPD is not set
 # CONFIG_SYN_COOKIES is not set
-CONFIG_INET_AH=y
+# CONFIG_INET_AH is not set
 CONFIG_INET_ESP=y
 CONFIG_INET_IPCOMP=y
 CONFIG_INET_XFRM_TUNNEL=y
@@ -1146,7 +1147,7 @@ CONFIG_NF_CONNTRACK_NETBIOS_NS=y
 # CONFIG_NF_CONNTRACK_SNMP is not set
 CONFIG_NF_CONNTRACK_PPTP=y
 CONFIG_NF_CONNTRACK_SANE=y
-CONFIG_NF_CONNTRACK_SIP=y
+# CONFIG_NF_CONNTRACK_SIP is not set
 CONFIG_NF_CONNTRACK_TFTP=y
 CONFIG_NF_CT_NETLINK=y
 # CONFIG_NF_CT_NETLINK_TIMEOUT is not set
@@ -1198,7 +1199,7 @@ CONFIG_NETFILTER_XT_MATCH_CONNTRACK=y
 # CONFIG_NETFILTER_XT_MATCH_DSCP is not set
 CONFIG_NETFILTER_XT_MATCH_ECN=y
 # CONFIG_NETFILTER_XT_MATCH_ESP is not set
-CONFIG_NETFILTER_XT_MATCH_HASHLIMIT=y
+# CONFIG_NETFILTER_XT_MATCH_HASHLIMIT is not set
 CONFIG_NETFILTER_XT_MATCH_HELPER=y
 CONFIG_NETFILTER_XT_MATCH_HL=y
 CONFIG_NETFILTER_XT_MATCH_IPRANGE=y
@@ -1261,7 +1262,7 @@ CONFIG_NF_NAT_TFTP=y
 CONFIG_NF_NAT_AMANDA=y
 CONFIG_NF_NAT_PPTP=y
 CONFIG_NF_NAT_H323=y
-CONFIG_NF_NAT_SIP=y
+# CONFIG_NF_NAT_SIP is not set
 CONFIG_IP_NF_MANGLE=y
 # CONFIG_IP_NF_TARGET_CLUSTERIP is not set
 # CONFIG_IP_NF_TARGET_ECN is not set
@@ -1275,7 +1276,7 @@ CONFIG_IP_NF_ARP_MANGLE=y
 # IPv6: Netfilter Configuration
 #
 CONFIG_NF_DEFRAG_IPV6=y
-CONFIG_NF_CONNTRACK_IPV6=y
+# CONFIG_NF_CONNTRACK_IPV6 is not set
 # CONFIG_IP6_NF_QUEUE is not set
 CONFIG_IP6_NF_IPTABLES=y
 # CONFIG_IP6_NF_MATCH_AH is not set
@@ -1626,7 +1627,7 @@ CONFIG_SCSI_LOWLEVEL=y
 CONFIG_MD=y
 # CONFIG_BLK_DEV_MD is not set
 CONFIG_BLK_DEV_DM=y
-CONFIG_DM_DEBUG=y
+# CONFIG_DM_DEBUG is not set
 CONFIG_DM_CRYPT=y
 # CONFIG_DM_SNAPSHOT is not set
 # CONFIG_DM_THIN_PROVISIONING is not set
@@ -2286,7 +2287,7 @@ CONFIG_MFD_PM8XXX_IRQ=y
 # CONFIG_MFD_PM8821_IRQ is not set
 # CONFIG_MFD_TPS65090 is not set
 # CONFIG_MFD_AAT2870_CORE is not set
-CONFIG_MFD_PM8XXX_DEBUG=y
+# CONFIG_MFD_PM8XXX_DEBUG is not set
 # CONFIG_MFD_PM8XXX_PWM is not set
 CONFIG_MFD_PM8XXX_MISC=y
 # CONFIG_MFD_PM8XXX_SPK is not set
@@ -3349,8 +3350,7 @@ CONFIG_IOMMU_SUPPORT=y
 #
 # LGE Broadcast Device Support
 #
-CONFIG_LGE_BROADCAST_TDMB=y
-CONFIG_LGE_BROADCAST_TDMB_FC8050=y
+# CONFIG_LGE_BROADCAST_TDMB is not set
 
 #
 # File systems
@@ -3558,12 +3558,11 @@ CONFIG_STACKTRACE=y
 # CONFIG_DEBUG_STACK_USAGE is not set
 # CONFIG_DEBUG_KOBJECT is not set
 # CONFIG_DEBUG_HIGHMEM is not set
-CONFIG_DEBUG_BUGVERBOSE=y
-CONFIG_DEBUG_INFO=y
-# CONFIG_DEBUG_INFO_REDUCED is not set
+# CONFIG_DEBUG_BUGVERBOSE is not set
+# CONFIG_DEBUG_INFO is not set
 # CONFIG_DEBUG_VM is not set
 # CONFIG_DEBUG_WRITECOUNT is not set
-CONFIG_DEBUG_MEMORY_INIT=y
+# CONFIG_DEBUG_MEMORY_INIT is not set
 # CONFIG_DEBUG_LIST is not set
 # CONFIG_TEST_LIST_SORT is not set
 # CONFIG_DEBUG_SG is not set
@@ -3572,7 +3571,7 @@ CONFIG_DEBUG_MEMORY_INIT=y
 # CONFIG_BOOT_PRINTK_DELAY is not set
 # CONFIG_RCU_TORTURE_TEST is not set
 CONFIG_RCU_CPU_STALL_TIMEOUT=60
-CONFIG_RCU_CPU_STALL_VERBOSE=y
+# CONFIG_RCU_CPU_STALL_VERBOSE is not set
 # CONFIG_RCU_CPU_STALL_INFO is not set
 # CONFIG_RCU_TRACE is not set
 # CONFIG_KPROBES_SANITY_TEST is not set
@@ -3702,6 +3701,7 @@ CONFIG_CRYPTO_MD5=y
 # CONFIG_CRYPTO_RMD256 is not set
 # CONFIG_CRYPTO_RMD320 is not set
 CONFIG_CRYPTO_SHA1=y
+CONFIG_CRYPTO_SHA1_ARM=y
 CONFIG_CRYPTO_SHA256=y
 # CONFIG_CRYPTO_SHA512 is not set
 # CONFIG_CRYPTO_TGR192 is not set
@@ -3711,6 +3711,7 @@ CONFIG_CRYPTO_SHA256=y
 # Ciphers
 #
 CONFIG_CRYPTO_AES=y
+CONFIG_CRYPTO_AES_ARM=y
 # CONFIG_CRYPTO_ANUBIS is not set
 CONFIG_CRYPTO_ARC4=y
 # CONFIG_CRYPTO_BLOWFISH is not set
