--- a/arch/arm/configs/su640_wind_defconfig
+++ b/arch/arm/configs/su640_wind_defconfig
@@ -1491,9 +1491,7 @@ CONFIG_REGMAP_SPI=y
 CONFIG_DMA_SHARED_BUFFER=y
 CONFIG_GENLOCK=y
 CONFIG_GENLOCK_MISCDEVICE=y
-CONFIG_SYNC=y
-CONFIG_SW_SYNC=y
-# CONFIG_SW_SYNC_USER is not set
+# CONFIG_SYNC is not set
 # CONFIG_CMA is not set
 # CONFIG_CONNECTOR is not set
 # CONFIG_MTD is not set
@@ -2601,10 +2599,6 @@ CONFIG_MSM_KGSL_PAGE_TABLE_SIZE=0xFFF0000
 CONFIG_MSM_KGSL_PAGE_TABLE_COUNT=24
 CONFIG_MSM_KGSL_MMU_PAGE_FAULT=y
 # CONFIG_MSM_KGSL_DISABLE_SHADOW_WRITES is not set
-CONFIG_MSM_KGSL_DEFAULT_GPUMMU=y
-CONFIG_MSM_KGSL_PAGE_TABLE_SIZE_FOR_IOMMU=0x1FE00000
-CONFIG_MSM_KGSL_KILL_HANG_PROCESS=y
-# CONFIG_MSM_KGSL_GPU_USAGE is not set
 # CONFIG_VGASTATE is not set
 CONFIG_VIDEO_OUTPUT_CONTROL=y
 CONFIG_FB=y
