overclock to 1.7 by default

--- a/arch/arm/configs/su640_wind_defconfig
+++ b/arch/arm/configs/su640_wind_defconfig
@@ -262,7 +262,7 @@ CONFIG_LGE_DEV_NEEDS_TO_FIX=y
 #
 # LGE Debug Feature
 #
-CONFIG_LGE_DEBUG=y
+# CONFIG_LGE_DEBUG is not set
 
 #
 # LGE ETA Feature
@@ -721,8 +721,8 @@ CONFIG_MSM_DALRPC=y
 # CONFIG_MSM_DALRPC_TEST is not set
 CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
-CONFIG_MSM_CPU_FREQ_MAX=1512000
-CONFIG_MSM_CPU_FREQ_MIN=384000
+CONFIG_MSM_CPU_FREQ_MAX=1728000
+CONFIG_MSM_CPU_FREQ_MIN=192000
 # CONFIG_MSM_AVS_HW is not set
 # CONFIG_MSM_HW3D is not set
 CONFIG_AMSS_7X25_VERSION_2009=y
@@ -3307,10 +3307,10 @@ CONFIG_ANDROID_RAM_CONSOLE=y
 CONFIG_ANDROID_TIMED_OUTPUT=y
 CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
-# CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES is not set
+CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
 # CONFIG_ANDROID_SWITCH is not set
 # CONFIG_ANDROID_INTF_ALARM_DEV is not set
-CONFIG_LGE_AGGRESSIVE_LMK=y
+# CONFIG_LGE_AGGRESSIVE_LMK is not set
 CONFIG_LGE_DEATHPENDING_LMK=y
 # CONFIG_PHONE is not set
 # CONFIG_USB_WPAN_HCD is not set
